cluster/apps/grafana/grafana-ingressroute.yaml
# grafana-local-ingressroute
# grafana-http-ingressroute
# grafana-https-ingressroute
# grafana-middleware-redirect-scheme

# grafana-middleware-headers

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-local-ingressroute
  namespace: grafana
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: grafana-grafana
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http-ingressroute
  namespace: grafana
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: grafana-middleware-redirect-scheme
      services:
        - name: grafana-grafana
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https-ingressroute
  namespace: grafana
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: grafana-middleware-headers
      services:
        - name: grafana-grafana
          port: 80
  tls:
    secretName: grafana-letsencrypt-production-certificate

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-middleware-redirect-scheme
  namespace: grafana
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-middleware-headers
  namespace: grafana
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    sslRedirect: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
    # stsSeconds: 63072000
    contentSecurityPolicy: |
      default-src 'none';form-action 'none';frame-ancestors 'none';base-uri 'none'
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowOriginList:
      - "https://grafana.${SECRET_DIGITALOCEAN_DOMAIN_02}"
    accessControlMaxAge: 100
    addVaryHeader: true
    referrerPolicy: "same-origin"
    customFrameOptionsValue: SAMEORIGIN
